modifying mobile view

--- a/src/app/staff-request-form/staff-request-form.component.css
+++ b/src/app/staff-request-form/staff-request-form.component.css
@@ -53,8 +53,9 @@ button[type="submit"] {
 @media (max-width: 599px) {
   /* Styles for small screens */
   .container_form {
-    max-width: 100%;
+    max-width: 00%;
     padding: 10px;
+    height: max-content;
   }
   h1 {
     font-size: 24px;
